--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
- VITE_ULR=http://localhost:4040
-#  VITE_ULR=https://blog-server-mm8b.onrender.com
+#  VITE_ULR=http://localhost:4040
+ VITE_ULR=https://blog-server-mm8b.onrender.com
